--- a/web/package.json
+++ b/web/package.json
@@ -60,6 +60,7 @@
     "web3": "^1.2.1"
   },
   "devDependencies": {
+    "prettier": "^1.18.2",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0"
   }
