--- a/web/package.json
+++ b/web/package.json
@@ -43,7 +43,9 @@
     "@types/web3": "^1.0.19",
     "antd": "^3.22.0",
     "apollo-boost": "^0.4.4",
+    "await-semaphore": "^0.1.3",
     "bignumber.js": "^9.0.0",
+    "ethers": "^4.0.36",
     "graphql": "^14.5.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
