--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "apollo-boost": "^0.4.4",
     "await-semaphore": "^0.1.3",
     "bignumber.js": "^9.0.0",
+    "decko": "^1.2.0",
     "ethers": "^4.0.36",
     "graphql": "^14.5.3",
     "react": "^16.9.0",
